fix(curr-proj): header glow horizontal page overflow

--- a/src/App.css
+++ b/src/App.css
@@ -303,10 +303,9 @@
 .glow-header {
   position: absolute;
   align-self: center;
-  width: 200%;
-  height: 2em;
-  border-radius: 50%;
-  background: radial-gradient(circle, rgba(255, 255, 255, 0.2) 10%, rgba(255, 255, 255, 0) 0%);
+  width: 100%;
+  height: 4em;
+  background: radial-gradient(ellipse, rgba(255, 255, 255, 0.6) 15%, rgba(255, 255, 255, 0) 0%);
   filter: blur(2em);
   z-index: 0;
   pointer-events: none;
